feat: add field for contribution_amount and percentage
